--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
 <body>
     <header>
         <a href="#" class="logo">
-            <img src="assets/img/final1-01.png" alt="villa-logo">
+            <img src="assets/img/final1-01.png" alt="ferme-logo">
             <div>
                 <p>La ferme rose</p>
                 <span>Moustier Sainte Marie</span>
             </div>
-            
         </a>
         <div class="menu">
             <a href="#" class="btn" target=_blank>RESERVER</a>
