--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </a>
         <div class="menu">
             <a href="#" class="btn" target=_blank>RESERVER</a>
-            <button class="menu-nav-toggle" aria-controls="primary-navigation" aria-expanded="false">
+            <button class="burger" aria-controls="primary-navigation" aria-expanded="false">
                 <span class="line1"></span>
                 <span class="line2"></span>
                 <span class="line3"></span>
@@ -29,11 +29,11 @@
         </div>
         <!-- <img src="./assets/img/menu-burger.png" alt="menu-burger" class="burger"> -->
         <nav id="primary-navigation" class="primary-navigation">
-            <a href="#" class="active"><span aria-hidden="true"></span>HÔTEL</a>
-            <a href="#about" class="nav-link"><span aria-hidden="true"></span>MOUSTIER</a>
-            <a href="#experience" class="nav-link"><span aria-hidden="true"></span>EXPERIENCES</a>
-            <a href="#experience" class="nav-link"><span aria-hidden="true"></span>GALLERY</a>
-            <a href="#contact" class="nav-link"><span aria-hidden="true"></span>CONTACT US</a>
+            <a href="#" class="active">HÔTEL</a>
+            <a href="#about" class="nav-link">MOUSTIER</a>
+            <a href="#experience" class="nav-link">EXPERIENCES</a>
+            <a href="#experience" class="nav-link">GALLERY</a>
+            <a href="#contact" class="nav-link">CONTACT US</a>
         </nav>
     </header>
     <main>
@@ -57,10 +57,13 @@
             </div>
         </div>
         <div class="accomodation">
+           
             <div class="accomodation-txt">
                 <!-- <p>La Ferme Rose offre une expérience hôtelière singulière : douze chambres, chacune conçue de manière individuelle avec de ravissantes salles de bains entièrement couvertes de faïence de Salernes. Dans cette atmosphère unique et inattendue, laissez-vous porter par une ambiance détendue.</p> -->
-                <p>Découvrez un séjour où confort et chaleur s'associent à l'espace et à la sophistication pour une ambiance douillette.</p>
-                <a href="#" class="btn-light" target=_blank>Découvrir nos chambres</a>
+                <div class="text">
+                    <p>Découvrez un séjour où confort et chaleur s'associent à l'espace et à la sophistication pour une ambiance douillette.</p>
+                    <a href="#" class="btn-light" target=_blank>Découvrir nos chambres</a>
+                </div>
             </div>
         </div>
         <div id="experience" class="experience">
