--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         <!-- <img src="./assets/img/menu-burger.png" alt="menu-burger" class="burger"> -->
         <nav id="primary-navigation" class="primary-navigation">
             <a href="#" class="active">HÔTEL</a>
-            <a href="#about" class="nav-link">MOUSTIER</a>
-            <a href="#experience" class="nav-link">EXPERIENCES</a>
+            <a href="#about" class="nav-link">CHAMBRES</a>
+            <a href="#experience" class="nav-link">SALON & BAR</a>
             <a href="#experience" class="nav-link">GALLERY</a>
-            <a href="#contact" class="nav-link">CONTACT US</a>
+            <a href="#contact" class="nav-link">A PROPOS</a>
         </nav>
     </header>
     <main>
