cropped video hero

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <main>
         <div id="hero" class="hero">
             <video autoplay muted loop poster="/Users/ericchow/Documents/KAKO/kako/assets/img/piscine-3-booking.jpg">
-                <source src="/assets/img/hotel-v2.mp4" type="video/mp4">
+                <source src="/assets/img/hotel-fill.mp4" type="video/mp4">
                 Votre navigateur ne supporte pas ce vidéo tag
             </video>
         </div>
