--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
+    <link rel="shortcut icon" href="assets/img/final1-01.png">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css'>
     <script defer src="./assets/js/main.js"></script>
@@ -14,17 +15,17 @@
     <header>
         <a href="#" class="logo">
             <img src="assets/img/final1-01.png" alt="ferme-logo">
-            <div>
+            <div class="logo-name">
                 <p>La ferme rose</p>
                 <span>Moustier Sainte Marie</span>
             </div>
         </a>
         <div class="menu">
-            <a href="#" class="btn" target=_blank>RESERVER</a>
+            <a href="#" class="btn btn-header" target=_blank>RESERVER</a>
             <button class="burger" aria-controls="primary-navigation" aria-expanded="false">
-                <span class="line1"></span>
-                <span class="line2"></span>
-                <span class="line3"></span>
+                <span class="line line1"></span>
+                <span class="line line2"></span>
+                <span class="line line3"></span>
             </button> 
         </div>
         <!-- <img src="./assets/img/menu-burger.png" alt="menu-burger" class="burger"> -->
@@ -38,7 +39,8 @@
     </header>
     <main>
         <div id="hero" class="hero">
-            <video autoplay muted loop poster="/Users/ericchow/Documents/KAKO/kako/assets/img/piscine-3-booking.jpg">
+            <!-- add loop autoplay -->
+            <video muted >
                 <source src="/assets/img/hotel-fill.mp4" type="video/mp4">
                 Votre navigateur ne supporte pas ce vidéo tag
             </video>
