homepage style done

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <main>
         <div id="hero" class="hero">
             <!-- add loop autoplay -->
-            <video muted >
+            <video muted class="video-hero">
                 <source src="/assets/img/hotel-fill.mp4" type="video/mp4">
                 Votre navigateur ne supporte pas ce vidéo tag
             </video>
@@ -59,41 +59,42 @@
             </div>
         </div>
         <div class="accomodation">
-           
-            <div class="accomodation-txt">
-                <!-- <p>La Ferme Rose offre une expérience hôtelière singulière : douze chambres, chacune conçue de manière individuelle avec de ravissantes salles de bains entièrement couvertes de faïence de Salernes. Dans cette atmosphère unique et inattendue, laissez-vous porter par une ambiance détendue.</p> -->
-                <div class="text">
-                    <p>Découvrez un séjour où confort et chaleur s'associent à l'espace et à la sophistication pour une ambiance douillette.</p>
-                    <a href="#" class="btn-light" target=_blank>Découvrir nos chambres</a>
+            <div class="accomodation-info">
+                <h2>Chambres</h2>
+                <div class="wrap-info">
+                    <h3>Découvrez un séjour où confort et chaleur s'associent à l'espace et à la sophistication pour une ambiance douillette.</h3>
+                    <p>La ferme rose offre un haut niveau d'hospitalité à Moustier, avec la possibilité d'un hébergement dans des chambres au style authentique, que ce soit pour un séjour en couple, en famille ou entre amis.</p>
+                    <a href="/assets/view/room.html" class="btn btn-info" target=_blank>Découvrir nos chambres</a>
                 </div>
+            </div>
+            <div class="accomodation-image">
+                <img src="/assets/img/chamande2.jpg" alt="">
             </div>
         </div>
         <div id="experience" class="experience">
             <h2>Expérience</h2>
-            <div class="experience-content">
-                <img src="/assets/img/verdon-section.jpg" alt="gorge-du-verdon">
-                <div class="desc">
-                    <h3>Gorge du verdon</h3>
-                    <div class="info">
-                        <p>Explorez les merveilleux paysages des Gorges du Verdon en toute liberté grâce à notre location de bateaux électriques. Naviguez à votre rythme, imprégnez-vous de la beauté naturelle qui vous entoure et créez des souvenirs inoubliables le long de la rivière. </p>
-                    </div>  
-                    <div>
-                        <a href="#" class="btn-light">En savoir plus</a>   
+            <div class="wrap-experience">
+                <div class="experience-content">
+                    <img src="/assets/img/verdon-section.jpg" alt="gorge-du-verdon">
+                    <div class="experience-desc">
+                        <div class="wrap-info-experience">
+                            <h3>Gorge du verdon</h3>
+                            <p>Explorez les merveilleux paysages des Gorges du Verdon en toute liberté grâce à notre location de bateaux électriques. Naviguez à votre rythme, imprégnez-vous de la beauté naturelle qui vous entoure et créez des souvenirs inoubliables le long de la rivière. </p>
+                            <a href="#" class="btn btn-rose">En savoir plus</a>   
+                        </div>  
                     </div>
                 </div>
-            </div>
-            <div class="experience-content">
-                <div class="desc">
-                    <h3>Moustier 360°</h3>
-                    <div class="info">
-                        <p>Plongez dans l'élégance cachée du Kako Bistrot, niché au cœur du village Moustiers-Saint-Marie. Détendez-vous en savourant un verre de vin ou une coupe de champagne dans une ambiance apaisante sur notre belle terrasse, loin du tumulte touristique.</p>
-                    </div>  
-                    <div>
-                        <a href="#" class="btn-light">En savoir plus</a>   
+                <div class="experience-content">
+                    <div class="experience-desc">
+                        <div class="wrap-info-experience">
+                        <h3>Moustier 360°</h3>
+                            <p>Plongez dans l'élégance cachée du Kako Bistrot, niché au cœur du village Moustiers-Saint-Marie. Détendez-vous en savourant un verre de vin ou une coupe de champagne dans une ambiance apaisante sur notre belle terrasse, loin du tumulte touristique.</p>
+                            <a href="#" class="btn btn-rose">En savoir plus</a>   
+                        </div>  
                     </div>
+                    <img src="/assets/img/kako-bistrot.jpeg" alt="gorge-du-verdon">
+    
                 </div>
-                <img src="/assets/img/kako-bistrot.jpeg" alt="gorge-du-verdon">
-
             </div>
         </div> 
         <div id="contact" class="contact">
