landing page style done

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="assets/img/final1-01.png">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css'>
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-straight/css/uicons-regular-straight.css'>
     <script defer src="./assets/js/main.js"></script>
     <title>La Ferme Rose - Hôtel de charme à Moustier-Sainte-Marie</title>
 </head>
@@ -77,7 +78,7 @@
                 <div class="experience-content">
                     <img src="/assets/img/verdon-section.jpg" alt="gorge-du-verdon">
                     <div class="experience-desc">
-                        <div class="wrap-info-experience">
+                        <div class="wrap-info-experience odd">
                             <h3>Gorge du verdon</h3>
                             <p>Explorez les merveilleux paysages des Gorges du Verdon en toute liberté grâce à notre location de bateaux électriques. Naviguez à votre rythme, imprégnez-vous de la beauté naturelle qui vous entoure et créez des souvenirs inoubliables le long de la rivière. </p>
                             <a href="#" class="btn btn-rose">En savoir plus</a>   
@@ -86,7 +87,7 @@
                 </div>
                 <div class="experience-content">
                     <div class="experience-desc">
-                        <div class="wrap-info-experience">
+                        <div class="wrap-info-experience even">
                         <h3>Moustier 360°</h3>
                             <p>Plongez dans l'élégance cachée du Kako Bistrot, niché au cœur du village Moustiers-Saint-Marie. Détendez-vous en savourant un verre de vin ou une coupe de champagne dans une ambiance apaisante sur notre belle terrasse, loin du tumulte touristique.</p>
                             <a href="#" class="btn btn-rose">En savoir plus</a>   
@@ -110,18 +111,85 @@
 
                     <label for="message">Votre message</label>
                     <textarea  id="message" name="message" placeholder="Hello Kako, je souhaite...."></textarea>
+                    <a class="btn btn-info" type="submit">Envoyer</a>
                 </div>
             </div>
           
         </div>
     </main>
-    <footer>
-        <div class="social">
-            <i class="fi fi-brands-github"></i>
-            <i class="fi fi-brands-instagram"></i>
-            <i class="fi fi-brands-linkedin"></i>
+    <!-- <div class="logo-area">
+        <div class="wrap">
+            <div class="logos">
+                <div class="col">
+                    <h4></h4>
+                    <div class="logo-sibling">
+                        <a href="">
+                            <img src="" alt="">
+                            <h5></h5>
+                        </a>
+                    </div>
+                    <div class="logo-sibling">
+                        <a href="">
+                            <img src="" alt="">
+                            <h5></h5>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
-            <p> Designed & Developed by Eric Chow</p>
+    </div> -->
+    <footer>
+        <div class="footer-wrap">
+            <div class="footer-columns">
+                <div class="col-footer one">
+                    <a href="#" class="btn btn-rose" target=_blank>RESERVER</a>
+                    <div class="contact-info">
+                        <p>Chem. de Peyrengue, 04360 Moustiers-Sainte-Marie</p>
+                        <div class="mail contact-icon">
+                            <i class="fi fi-rs-envelope"></i>
+                            <p>contact@lafermerose.com</p>
+                        </div>
+                        <div class="phone contact-icon">
+                            <i class="fi fi-rs-phone-call"></i>
+                            <p> 04 92 75 75 75</p>
+                        </div>
+                        <a href="https://goo.gl/maps/Ac1SdcGsKVWnsL4P8" class="social-icon"><i class="fi fi-brands-google"></i></a>
+                        <a href="https://www.tripadvisor.fr/Hotel_Review-g445024-d270587-Reviews-La_Ferme_Rose-Moustiers_Sainte_Marie_Digne_les_Bains_Alpes_de_Haute_Provence_Provence_A.html?m=19905" class="social-icon"><i class="fi fi-brands-tripadvisor"></i></a>
+                    </div>
+                </div>
+                <div class="col-footer two">
+                    <div class="site-map-wrap">
+                        <ul class="site-map">
+                            <li><a href="index.html">Accueil</a></li>
+                            <li><a href="/assets/view/room.html">Chambres</a></li>
+                            <li><a href="">Expérience</a></li>
+                            <li><a href="">Moustier</a></li>
+                            <li><a href="">Gallery</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-footer two">
+                    <div class="site-map-wrap">
+                        <ul class="site-map">
+                            <li><a href="">Notre histoire</a></li>
+                            <li><a href="">Contactez nous</a></li>
+                            <li><a href="">Mention Légale</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-footer three">
+                    <a href="#" class="logo-footer">
+                        <img src="assets/img/final1-01.png" alt="ferme-logo">
+                        <div class="logo-footer-name">
+                            <h1>La ferme rose</h1>
+                            <p>Moustier Sainte Marie</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <p class="developer"> Designed & Developed by Eric Chow</p>
+        </div>
     </footer>
+    
 </body>
 </html>
