room and preview done

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     </header>
     <main>
         <div id="hero" class="hero">
-            <!-- add loop autoplay -->
-            <video muted class="video-hero">
+            <!-- add  -->
+            <video loop autoplay muted class="video-hero">
                 <source src="/assets/img/hotel-fill.mp4" type="video/mp4">
                 Votre navigateur ne supporte pas ce vidéo tag
             </video>
