add bar video & gallery

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         </div>
         <!-- <img src="./assets/img/menu-burger.png" alt="menu-burger" class="burger"> -->
         <nav id="primary-navigation" class="primary-navigation">
-            <a href="#" class="active">HÔTEL</a>
-            <a href="#about" class="nav-link">CHAMBRES</a>
-            <a href="#experience" class="nav-link">SALON & BAR</a>
-            <a href="#experience" class="nav-link">GALLERY</a>
-            <a href="#contact" class="nav-link">A PROPOS</a>
+            <a href="#" class="active">Accueil</a>
+            <a href="#about" class="nav-link">Séjour</a>
+            <a href="#experience" class="nav-link">Expérience</a>
+            <a href="#experience" class="nav-link">Gallery</a>
+            <a href="#contact" class="nav-link">Notre histoire</a>
         </nav>
     </header>
     <main>
@@ -56,6 +56,20 @@
                 </div>
                 <div class="about-desc">
                     <p>Venez vivre Moustier-Sainte-Marie, son histoire, sa culture et ses charmes naturels avec confort et authenticité, en vous reconnectant avec la provence.</p>
+                </div>
+            </div>
+        </div>
+        <div class="bar-salon">
+            <!-- add  -->
+            <video loop autoplay muted class="video-bar">
+                <source src="/assets/img/bar-salon.mp4" type="video/mp4">
+                Votre navigateur ne supporte pas ce vidéo tag
+            </video>
+        </div>
+        <div id="about" class="about-two">
+            <div class="about-content">
+                <div class="about-desc">
+                    <p>Kako y présente ses collections d'objets des années 50 (caméras, lampes Vallauris, jouets en tôle, moulins à café,...), les tableaux de son grand-père, peintre méridional réputé, et, dans le coin bistrot qui prolonge la tonnelle, un amusant mobilier parmi lequel on remarque les tables, chaises et banquettes qui proviennent du bar de l'ancienne brasserie Noailles à Marseille.</p>
                 </div>
             </div>
         </div>
@@ -164,7 +178,7 @@
                             <li><a href="/assets/view/room.html">Chambres</a></li>
                             <li><a href="">Expérience</a></li>
                             <li><a href="">Moustier</a></li>
-                            <li><a href="">Gallery</a></li>
+                            <li><a href="assets/view/gallery.html">Gallery</a></li>
                         </ul>
                     </div>
                 </div>
